--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
           </div>
           <div class="centered-main-page-element">
-            <p id="topSectionForAddingElementToList">
+            <p id="top-section-for-adding-element-to-list">
               <label for="new-task">Add Item</label>
               <div class="task-row-wrapper">
                 <input id="new-task" class="task" type="text">
@@ -18,7 +18,8 @@
               </div>
             </p>
             <h3>Todo</h3>
-            <li>
+            <ul id="in-complete-tasks">
+              <li>
                 <input type="checkbox">
                 <label class="task">Pay Bills</label>
                 <input type="text">
@@ -27,15 +28,15 @@
                   <img src="./remove.svg">
                 </button>
               </li>
-              <li class="editMode">
+              <li class="edit-mode">
                 <input type="checkbox">
                 <label class="task">Go Shopping</label>
                 <input type="text" value="Go Shopping" class="task">
                 <button class="edit">Save</button>
                 <button class="delete">
-                  <img src="./remove.svg"></button>
-                </li>
-            </ul>
+                 <img src="./remove.svg"></button>
+          </li>
+      </ul>
             <h3>Completed</h3>
             <ul id="completed-tasks">
               <li>
