--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
       <body>
         <div class="header">
             <img src="./eisenhower-matrix.jpg">
-            <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+            <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
+                Want more details?</a>
           </div>
-          <div class="centered-main-page-element">
-            <p id="top-section-for-adding-element-to-list">
-              <label for="new-task">Add Item</label>
-              <div class="task-row-wrapper">
-                <input id="new-task" class="task" type="text">
+          <div class="main">
+            <p id="main__subtitle">
+              <label for="task-adding-form__input">Add Item</label>
+              <div class="task-adding-form">
+                <input id="task-adding-form__input" class="task" type="text">
                 <button>Add</button>
               </div>
             </p>
             <h3>Todo</h3>
-            <ul id="in-complete-tasks">
+            <ul id="complete-tasks-list">
               <li>
                 <input type="checkbox">
                 <label class="task">Pay Bills</label>
                 <input type="text">
-                <button class="edit">Edit</button>
-                <button class="delete">
+                <button class="edit-task-btn">Edit</button>
+                <button class="delete-task-btn">
                   <img src="./remove.svg">
                 </button>
               </li>
@@ -32,8 +33,8 @@
                 <input type="checkbox">
                 <label class="task">Go Shopping</label>
                 <input type="text" value="Go Shopping" class="task">
-                <button class="edit">Save</button>
-                <button class="delete">
+                <button class="edit-task-btn">Save</button>
+                <button class="delete-task-btn"> 
                  <img src="./remove.svg"></button>
           </li>
       </ul>
@@ -43,8 +44,8 @@
                 <input type="checkbox" checked>
                 <label class="task">See the Doctor</label>
                 <input type="text" class="task">
-                <button class="edit">Edit</button>
-                <button class="delete">
+                <button class="edit-task-btn">Edit</button>
+                <button class="delete-task-btn">
                   <img src="./remove.svg">
                 </button>
             </li>
