--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
       <body class="page">
         <header class="header">
-            <img src="./eisenhower-matrix.jpg">
+            <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
             <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
                 Want more details?</a>
         </header>
