--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
                 Want more details?</a>
         </header>
-        <main class="task-list-block">
+        <main class="task-list-module">
             <section class="adding-task">
               <h3 class="task-list-subtitle">Add Item</h3>
               <div class="adding-task__form">
